# open-nmr-cpp

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  weirdcmakelist.txt
file_io/: ag.cpp  ag.h  string_operations.cpp
processing/: fft_1d_transformer.cpp  fft_1d_transformer.h  general.h
spectrum/: spectrum.cpp  spectrum.h
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app/file_io/: ag.cpp  ag.h  big_endian.cpp  big_endian.h  br.cpp  br.h  file_io.cpp  file_io.h  general.cpp  general.h  little_endian.cpp  little_endian.h  string_operations.cpp  string_operations.h
src/app/gui/: gui_utilities.cpp  gui_utilities.h  integralsdisplayer.cpp  integralsdisplayer.h  labeledslider.cpp  labeledslider.h  phasecorrectionwidget.cpp  phasecorrectionwidget.h  spectrum_displayer_actions.h  spectrumdisplayer.cpp  spectrumdisplayer.h  spectrumpainter.cpp  spectrumpainter.h  tabwidget.cpp  tabwidget.h  widgets_for_processing.cpp  widgets_for_processing.h  xaxis.cpp  xaxis.h
src/app/processing/: fft_1d_transformer.cpp  fft_1d_transformer.h  general.cpp  general.h  peak_finding.cpp  peak_finding.h  phase_correction.cpp  phase_correction.h  utils.cpp  utils.h  zero_filling.cpp  zero_filling.h
src/app/spectrum/: spectrum.cpp  spectrum.h  spectrum_info.h  spectrum_view.cpp  spectrum_view.h  value_typedefs.h
